# soroscope

./: Cargo.toml
contracts/emergency_guard/src/: lib.rs
contracts/flash_loan_vault/src/: lib.rs  test.rs
contracts/liquidity_pool/src/: lib.rs  test.rs
contracts/liquidity_pool/test_snapshots/fuzz_test/: test_swap_invariant.1.json  test_swap_invariant.10.json  test_swap_invariant.100.json  test_swap_invariant.101.json  test_swap_invariant.102.json  test_swap_invariant.103.json  test_swap_invariant.104.json  test_swap_invariant.105.json  test_swap_invariant.106.json  test_swap_invariant.107.json  test_swap_invariant.108.json  test_swap_invariant.109.json  test_swap_invariant.11.json  test_swap_invariant.110.json  test_swap_invariant.111.json  test_swap_invariant.112.json  test_swap_invariant.113.json  test_swap_invariant.114.json  test_swap_invariant.115.json  test_swap_invariant.116.json  test_swap_invariant.117.json  test_swap_invariant.118.json  test_swap_invariant.119.json  test_swap_invariant.12.json  test_swap_invariant.120.json  test_swap_invariant.121.json  test_swap_invariant.122.json  test_swap_invariant.123.json  test_swap_invariant.124.json  test_swap_invariant.125.json  test_swap_invariant.126.json  test_swap_invariant.127.json  test_swap_invariant.128.json  test_swap_invariant.129.json  test_swap_invariant.13.json  test_swap_invariant.130.json  test_swap_invariant.131.json  test_swap_invariant.132.json  test_swap_invariant.133.json  test_swap_invariant.134.json  (+216 more)
contracts/liquidity_pool/test_snapshots/test/: test_approve.1.json  test_approve_expired.1.json  (+17 more)
contracts/math/src/: lib.rs
contracts/typed_data_auth/src/: lib.rs  test.rs
core/: Cargo.toml
core/src/: auth.rs  errors.rs  fee_collector.rs  fee_store.rs  jobs.rs  lib.rs  main.rs  rpc_provider.rs  simulation.rs
web/components/: upload-zone.tsx
